package stock

type Repository interface {

}
